# ngbem

./: CMakeLists.txt  README  blockmatrix.hpp  blockmatrix.py  dg_coupling.py  dg_test.py  example.py  maxwell_johnson_nedelec.py  maxwell_ngbem.py  ng_grid_factory.cpp  ng_trace_shapeset.hpp  ng_trace_space.hpp  ngbem.py  plot_maxwell_trace.py  poisson.ipynb  poissonJS.ipynb  poissonJS2.ipynb  simple_helmholtz_fem_bem_coupling.py  space.pxd  test.cpp
cmake/: FindTBB.cmake
legacy/ngbem/: CMakeLists.txt  __init__.py  blockmatrix.cpp  ng_grid_factory.hpp  ng_trace_space.cpp  pyngbem.cpp  space.pyx
simple/: example.py  simple_helmholtz_fem_bem_coupling.py  simple_ngbem.py
